--- a/package.json
+++ b/package.json
@@ -9,14 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.4.0",
+    "@liveblocks/react": "^2.4.0",
+    "@liveblocks/react-lexical": "^2.4.0",
+    "@liveblocks/react-ui": "^2.4.0",
+    "@liveblocks/yjs": "^2.4.0",
+    "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.19.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "framer-motion": "^11.3.17",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.414.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
+    "y-monaco": "^0.1.5",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
